log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: shared-files
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: log-output
          image: famo1901/log-output:1.11.5
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/output-files
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: log-reader
          image: famo1901/log-reader:1.10
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/output-files
            - name: shared-files
              mountPath: /usr/src/app/files
